added home phone number in activation process and status icon also added in clients

--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -71,9 +71,14 @@
             </div>
             
             <div class="control-group">
-            	<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}</label>
+            	<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}<span class="required">*</span></label></label>
             		<div class="controls">
-              			<input type="text" id="homePhoneNumber" ng-model="formData.homePhoneNumber" >
+              			<input type="text" name="homephone" id="homePhoneNumber" ng-model="formData.homePhoneNumber" required  late-Validate/>
+              			<span  ng-show="createclientform.homephone.$invalid">
+                           <small class="error" ng-show="createclientform.homephone.$error.req">
+                                    Required Field
+                           </small>
+                         </span>
             		</div>
           	</div>
             
