--- a/app/views/clients/createclientwizard.html
+++ b/app/views/clients/createclientwizard.html
@@ -68,6 +68,19 @@
            </div>
               </div>
             </div>
+            
+            <div class="control-group">
+            	<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}<span class="required">*</span></label>
+            		<div class="controls">
+              			<input type="text" name="homephone" id="homePhoneNumber" ng-model="formData1.homePhoneNumber" required  late-Validate/>
+              			<span  ng-show="createclientform.homephone.$invalid">
+                           <small class="error" ng-show="createclientform.homephone.$error.req">
+                                    Required Field
+                           </small>
+                         </span>
+            		</div>
+          	</div>
+          	
              <div class="control-group">
               <label class="control-label" for="email">{{'label.email' | translate}}</label>
               <div class="controls">
