--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -542,7 +542,7 @@
                   <any>{{financialtransaction.amount}}</any>
               </td>
               <td>
-                <a ng-hide="financialtransaction.transactionType =='CANCEL PAYMENT'" ng-click="cancelPayment(financialtransaction.transactionId)" popover="Cancel Payment" popover-trigger="mouseenter"><i class="icon-remove-circle icon-white"></i></a>
+                <a ng-hide="financialtransaction.transactionType =='CANCEL PAYMENT' || financialtransaction.transactionType =='ADJUSTMENT'" ng-click="cancelPayment(financialtransaction.transactionId)" popover="Cancel Payment" popover-trigger="mouseenter"><i class="icon-remove-circle icon-white"></i></a>
               </td>
             </tr>
             
