--- a/app/views/paymentgateway/paymentGateway.html
+++ b/app/views/paymentgateway/paymentGateway.html
@@ -10,9 +10,11 @@
     <div>
       <tabset  style="margin-bottom: 0px;">
       
-      <tab heading="Payment Gateway" select="getPaymentGateway()">
-        <div class="row-fluid">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+      <tab heading="Failed" select="getPaymentGateway()">
+        <div class="row-fluid">                
+           <form ng-submit="searchFailedPaymentId(filterText)">
+               <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+           </form>
          <table class="table">
             <thead>
               <tr class="graybg">
@@ -22,14 +24,12 @@
                 <th>{{'table.paymentgateway.amountPaid' | translate}}</th>
                 <th>{{'table.paymentgateway.phoneno' | translate}}</th>
                 <th>{{'table.paymentgateway.remarks' | translate}}</th>
-                <th>{{'table.paymentgateway.status' | translate}}</th>
-                           
-               
-                
+                <th>{{'table.paymentgateway.status' | translate}}</th>          
               </tr>
             </thead>
             <tbody>
-             <tr ng-repeat="paymentgatewaydata in paymentgatewaydatas  | filter:filterText" ng-show="paymentgatewaydata.status=='Failure'">
+            <!--  -->
+             <tr ng-repeat="paymentgatewaydata in paymentgatewaydatas.currentPageItems  | filter:filterText" ng-show="paymentgatewaydata.status=='Failure'">
                 
                 <td>{{paymentgatewaydata.id}}</td>
                 <td>{{paymentgatewaydata.receiptNo}}</td> 
@@ -42,12 +42,18 @@
    			</tr>
      		 </tbody>
           </table>
+          <ul class="pager">
+              <li class="previous"><a  id="prev" ng-click="paymentgatewaydatas.previous()" href="" ng-disabled="!paymentgatewaydatas.hasPrevious()">&larr; Prev</a></li>
+              <li class="next" ><a  id="next"   ng-click="paymentgatewaydatas.next()" href="" ng-disabled="!paymentgatewaydatas.hasNext()">Next &rarr;</a></li>
+         </ul>
          </div>
       </tab>	
       
-      <tab heading="Hardware Mapping" active="ProvisioningTab">
+      <tab heading="Success" select="getPaymentGatewaySuccess()">
        <div class="row-fluid">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+           <form ng-submit="searchSuccessPaymentId(filterText)">
+               <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+           </form>
        <table class="table">
             <thead>
               <tr class="graybg">
@@ -63,7 +69,7 @@
               </tr>
             </thead>
             <tbody>
-             <tr ng-repeat="paymentgatewaydata in paymentgatewaydatas  | filter:filterText" ng-show="paymentgatewaydata.status=='Success'">
+             <tr ng-repeat="paymentgatewaydata in paymentgatewaydatas.currentPageItems  | filter:filterText" ng-show="paymentgatewaydata.status=='Success'">
                 
                 <td>{{paymentgatewaydata.id}}</td>
                  <td>{{paymentgatewaydata.receiptNo}}</td>       
@@ -77,6 +83,10 @@
    			</tr>
      		 </tbody>
           </table>
+           <ul class="pager">
+              <li class="previous"><a  id="prev" ng-click="paymentgatewaydatas.previous()" href="" ng-disabled="!paymentgatewaydatas.hasPrevious()">&larr; Prev</a></li>
+              <li class="next" ><a  id="next"   ng-click="paymentgatewaydatas.next()" href="" ng-disabled="!paymentgatewaydatas.hasNext()">Next &rarr;</a></li>
+           </ul>
          </div>
       </tab>
    
