--- a/app/views/eventorder/eventorder.html
+++ b/app/views/eventorder/eventorder.html
@@ -91,7 +91,7 @@
 	
 				         
 			<div class="offset3">
-				<a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
+				<a href='#/viewclient/{{clientId}}' class="btn" ng-click="reset123()">Cancel</a>
 				<button type="submit" class="btn btn-primary">Save</button>
 			</div>
 
