Changes on schedulerjobs and financial transaction tabs in viewclient

--- a/app/views/system/editschedulerjob.html
+++ b/app/views/system/editschedulerjob.html
@@ -9,7 +9,7 @@
 		<ul class="breadcrumb">
 	        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
 	        <li><a href="#/jobs">{{'label.manageschedulerjobs' | translate}}</a> <span class="divider">/</span></li>
-	        <li><a href="#/viewschedulerjob/{{job.jobId}}">{{job.displayName}}</a> <span class="divider">/</span></li>
+	      <!--  <li><a href="#/viewschedulerjob/{{job.jobId}}">{{job.displayName}}</a> <span class="divider">/</span></li>-->
 	        <li class="active">{{'label.editschedulerjob' | translate}}</li>
 	    </ul>
 	</div>
