--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -9,7 +9,7 @@
 		<ul class="breadcrumb">
 	        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
 	        <li><a href="#/jobs">{{'label.manageschedulerjobs' | translate}}</a> <span class="divider">/</span></li>
-	        <li><a href="#/viewschedulerjob/{{formData.jobId}}">{{formData.displayName}}</a> <span class="divider">/</span></li>
+	      <!--  <li><a href="#/viewschedulerjob/{{formData.jobId}}">{{formData.displayName}}</a> <span class="divider">/</span></li>-->
 	        <li class="active">{{'label.editschedulerjobparameters' | translate}}</li>
 	    </ul>
 	</div>
