--- a/app/views/clients/createclientnewwizard.html
+++ b/app/views/clients/createclientnewwizard.html
@@ -21,7 +21,7 @@
              <span id="progressno1" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;"><span id="active1">1.Client Information</span></span>
           </div>
        </div> 
-       <div class="jw-content ui-widget-content ui-helper-clearfix">
+       <div class="jw-content ui-widget-contentclass ui-helper-clearfix">
 		 <div class="jw-steps-wrap" >
 		     <div id="test1-step1" class="jw-step" ng-show="step1"  style="display: block;">
 				<div ng-include="'views/clients/createclientwizard.html'"></div>
