--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -87,9 +87,8 @@
                               
                         <table  width="100%" >
                              <tr>
-                               <td colspan="2">
-                               {{'label.Device' | translate}} <strong>:</strong>{{client.hwSerialNumber}}
-                               </td>
+                               <td >{{'label.Device' | translate}}</td>
+                               <td>{{client.hwSerialNumber}}</td>
                              </tr>
                             <tr>
                               <td width="35%">{{'label.Address' | translate}}</td>
@@ -103,9 +102,9 @@
                               <td>{{ 'label.country' | translate }}</td>
                               <td valign="top">{{client.country}}<strong>,</strong>{{client.zip}}</td>
                             </tr>
-                            <tr>
-                            <td colspan="2"><a href="#/editAddress/{{client.id}}">Edit Address</a><span class="divider">|</span>
-                             <a href="#/editAddress/{{client.id}}">Add Other Address</a></td>
+                             <tr>
+                            <td colspan="2"><a href="#/editAddress/{{client.id}}" class="btn btn-primary"><i class="icon-edit icon-white" ></i>Edit Address</button></a>
+                             <a href="#/editAddress/{{client.id}}" class="btn btn-primary"><i class="icon-plus-sign icon-white" ></i>Add Other Address</button></a></td>
                             </tr>
                           </table>
                       </div>
@@ -1054,7 +1053,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
-                        <button class="btn btn-primary" ng-click="accept(start.date)">{{'label.confirm' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="accept(start.date)" ng-disabled="flag">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
       <script type="text/ng-template" id="StatementPop.html">
