--- a/app/views/paymentgateway/paymentGateway.html
+++ b/app/views/paymentgateway/paymentGateway.html
@@ -10,7 +10,47 @@
     <div>
       <tabset  style="margin-bottom: 0px;">
       
-      <tab heading="Failed" select="getPaymentGateway()">
+      <tab heading="All" select="getPaymentGateway()">
+        <div class="row-fluid">                
+           <form ng-submit="searchPaymentId(filterText)">
+               <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+           </form>
+         <table class="table">
+            <thead>
+              <tr class="graybg">
+                <th>{{'table.paymentgateway.id' | translate}}</th>    
+                <th>{{'table.paymentgateway.receiptNo' | translate}}</th>  
+                <th>{{'table.paymentgateway.serialNo' | translate}}</th>
+                <th>{{'table.paymentgateway.amountPaid' | translate}}</th>
+                <th>{{'table.paymentgateway.phoneno' | translate}}</th>
+                <th>{{'table.paymentgateway.remarks' | translate}}</th>
+                <th>{{'table.paymentgateway.status' | translate}}</th>
+                <th>&nbsp;</th>          
+              </tr>
+            </thead>
+            <tbody>
+            <!--  -->
+             <tr ng-repeat="paymentgatewaydata in paymentgatewaydatas.currentPageItems  | filter:filterText">
+                
+                <td>{{paymentgatewaydata.id}}</td>
+                <td>{{paymentgatewaydata.receiptNo}}</td> 
+                <td>{{paymentgatewaydata.serialNo}}</td>
+                <td>{{paymentgatewaydata.amountPaid}}</td>
+                <td>{{paymentgatewaydata.phoneNo}}</td>
+                <td>{{paymentgatewaydata.remarks}}</td>
+                <td>{{paymentgatewaydata.status}}</td>                                     
+                <td><a href="#/editPaymentGateway/{{paymentgatewaydata.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i></a></td>       
+   			</tr>
+     		 </tbody>
+          </table>
+          <ul class="pager">
+              <li class="previous"><a  id="prev" ng-click="paymentgatewaydatas.previous()" href="" ng-disabled="!paymentgatewaydatas.hasPrevious()">&larr; Prev</a></li>
+              <li class="next" ><a  id="next"   ng-click="paymentgatewaydatas.next()" href="" ng-disabled="!paymentgatewaydatas.hasNext()">Next &rarr;</a></li>
+         </ul>
+         </div>
+      </tab>	
+      
+      <tab heading="Failed" select="getPaymentGatewayFailure()">
         <div class="row-fluid">                
            <form ng-submit="searchFailedPaymentId(filterText)">
                <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
