--- a/app/views/clients/payments.html
+++ b/app/views/clients/payments.html
@@ -167,7 +167,7 @@
   			
           <div class="offset3">
             <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+           <button type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
