--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -47,11 +47,11 @@
 	         <a ng-show="orderData.contractPeriod != 'Perpetual' && orderData.status == 'ACTIVE' && orderData.isPrepaid == 'N'" href="" ng-click="orderRenew(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-edit icon-white"></i>Renewal</a>
 	         <a ng-show="orderData.isPrepaid == 'Y'"  href="" ng-click="orderRenew(orderPriceDatas[0].orderId)"class="btn btn-primary"><i class="icon-arrow-up icon-white"></i>TopUp</a>
 	        <!--  <a ng-show="orderData.status == 'ACTIVE'" ng-click="CommandCenter(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Command Center</a> -->
-	         <a ng-show="orderData.status == 'PENDING'" ng-click="cancel()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel</a>
+	         <a ng-show="orderData.status == 'PENDING'" ng-click="cancelOrder()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel</a>
 	         <a ng-show ="association.orderId == null"  href="#/association/{{clientId}}/{{orderPriceDatas[0].orderId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Pairing</a>
 		     <a ng-show ="orderData.status == 'DISCONNECTED' && association.orderId != null" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
 		     <a ng-show  ="flag == true" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
-		     <a href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
+		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 	      
 	      <span  class="btn-group">
               <a class="btn btn-primary dropdown-toggle" ng-show="orderData.status == 'ACTIVE'">
