--- a/app/views/search/glresults.html
+++ b/app/views/search/glresults.html
@@ -4,7 +4,8 @@
       <div ng-repeat="result in searchResults">
           <div class="blockquoteresult" ng-class="{grbgcolor: result.entityId == selected}">
             <span><a href="#/viewclient/{{result.entityId}}">{{result.entityName}}</a>&nbsp;|&nbsp;#{{result.entityAccountNo}}</span>
-            <span ng-show = "result.entityType  == 'CLIENT'">
+            <!-- <span ng-show = "result.entityType  == 'CLIENT'"> -->
+            <span>
               <a ng-click="getClientDetails(result.entityId)" title="{{'label.additionalinformation'| translate}}"><i class="icon-zoom-in"></i></a>
             </span>
               <!--  <span ng-show = "result.entityType  == 'DEVICE'">
