--- a/app/views/administration/system.html
+++ b/app/views/administration/system.html
@@ -18,7 +18,7 @@
 				<p class="list-group-item-text">Define or modify maker checker tasks</p>
 			</a>
 			<a class="list-group-item" href="#/importing">
-				<h4 class="list-group-item-heading"><i class="icon-arrow-down"></i>&nbsp;&nbsp;{{'link.import' | translate }}</h4>
+				<h4 class="list-group-item-heading"><i class="icon-arrow-up"></i>&nbsp;&nbsp;{{'link.import' | translate }}</h4>
 				<p class="list-group-item-text">Import or Processing files</p>
 			</a>
 		</div>
