--- a/app/views/eventorder/eventorder.html
+++ b/app/views/eventorder/eventorder.html
@@ -70,7 +70,7 @@
 			<div class="control-group">
 				<label class="control-label">{{ 'label.opttype' | translate }}</label>
 				<div class="controls">
-	                <select ng-model="formData.optType"  ng-change="getEventPrice()" ng-options="optType.value as optType.value for optType in optTypes" value="{{optType.value}}"></select>
+	                <select ng-model="formData.optType"  ng-options="optType.value as optType.value for optType in optTypes" value="{{optType.value}}"></select>
 	             </div>
 			</div>
 			
@@ -81,12 +81,12 @@
 	            </div>	             
 			</div> -->
 			
-			<div class="control-group" ng-show="showPrice">
+			<!-- <div class="control-group" ng-show="showPrice">
 					<label class="control-label">{{ 'label.eventprice' | translate }}</label>
 				<div class="controls">
 	                <input type="text" ng-model="price" value="price"/> <span class="btn btn-primary" ng-click="updatePrice()">Update Price</span>
 	            </div>            
-			</div>
+			</div> -->
 			
 	
 				         
