--- a/app/views/clients/addonetimesale.html
+++ b/app/views/clients/addonetimesale.html
@@ -121,7 +121,7 @@
 
 		<div class="offset3">
 			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
-			<button type="submit" class="btn btn-primary">{{'button.save' | translate}}</button>
+			<button type="submit" class="btn btn-primary" ng-disabled="submitFlag">{{'button.save' | translate}}</button>
 		</div>
 	</fieldset>
 </form>
