--- a/app/views/system/viewschedulerjobhistory.html
+++ b/app/views/system/viewschedulerjobhistory.html
@@ -18,7 +18,7 @@
         <tbody>
             <tr ng-repeat="history in jobhistory.currentPageItems  | filter:filterText">
                 <td>{{history.version}}</td>
-                <td>{{history.jobRunStartTime}}</td>  
+                <td>{{history.jobRunStartTime|DateFormat}}</td>  
                 <td>{{history.status}}</td>
                 <td>{{history.triggerType}}</td>
                 <td><a ng-click="logFile(history.historyId)"><i class=" icon-download-alt icon-white"></i> Download</a></td>
